--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -48,79 +48,17 @@
 
 
 \noindent \textbf{Overview:}
-Observations show that magnetic fields are ubiquitous in the universe.
-They can be seen in intergalactic space, and organized, dynamically
-important magnetic fields thread the interstellar medium in galaxies
-across cosmic time and regardless of galaxy size or morphology.
-Molecular clouds form out of this magnetized plasma, and measurements
-show that these clouds have substantial magnetic fields as well, which
- may be critical to star formation,  one of
-the most important unsolved problems in astrophysics.  While magnetic
-fields have been observed in all of these astrophysical regimes, and
-there is a clear sequence of events -- galaxies form molecular clouds,
-which in turn are the sites of star formation -- the ways in which
-magnetic fields tie galaxies to molecular clouds, and thus potentially
-affect star formation and the initial stellar mass function, are
-poorly understood theoretically.  \textbf{There is a clear need for a
-detailed, self-consistent model of cosmological structure formation
-that can trace the evolution of magnetized gas to the physical scales
-relevant for star formation.}
+Magnetic fields in the Milky Way are present at all size scales, and impact its dynamics and observable properties.  Most notably magnetic fields impact the formation of stars, and fill the sky with polarized light.  Thus the behavior and evolution of this magnetic field is of great interest.
 
-Our objective in this project is to understand how galactic-scale
-magnetic fields affect the formation and evolution of molecular
-clouds, and in turn how magnetic fields ejected from stars forming in
-these clouds are amplified and ordered within galaxies.  We will
-pursue this goal through the use of magnetohydrodynamic (MHD)
-cosmological simulations of galaxy formation, which we will use to
-inform (and be informed by) idealized, high resolution MHD simulations
-of isolated galaxies  that resolve the
-formation of magnetized molecular clouds.  This will both determine the impact of
-magnetic fields on the bulk properties of these clouds and model the way in which
- fields are returned from stars to the interstellar medium. 
- Throughout our theoretical exploration, we will be
-motivated by, and compare our results to, observations of magnetic
-fields in the Milky Way, in nearby galaxies and the intergalactic medium, and in the high redshift
-universe.  The end result of this
-project will be a deep understanding of the connection between
-galaxies, molecular clouds, and the magnetic fields that permeate
-these objects.
+We will simulate how, when, and where magnetic fields are created in the Milky Way and similar sized galaxies.  We will use these simulations to produce high-resolution synthetic polarized dust and synchrotron maps for the study of foregrounds for the polarized cosmic microwave background (CMB). We will also study the correlations in the magnetic field as they impact the dynamics of the ISM in the galaxy.
 
-\textbf{Intellectual merit:} This project is novel because it will use
-high resolution magnetohydrodynamics simulations to self-consistently
-follow the evolution of plasma over a huge range of astrophysically
-important length, density, and temporal scales, thus bridging the gap
-between the cosmological structure formation that results in
-galactic-scale magnetic fields and the star-forming molecular clouds
-that form out of the magnetized interstellar medium.  This is crucial
-because an improved understanding of how magnetized molecular clouds
-form within galaxies will lead to more accurate initial conditions for
-targeted studies of star formation, and will provide an opportunity to
-model that critical process in a more realistic way.  The results of
-this project will facilitate our interpretation of observations of
-magnetic fields in the intergalactic medium, in both high redshift and
-nearby galaxies, and in the Milky Way galaxy itself.
+Our simulations will proceed in 2 stages in order to capture the complete history of the magnetic field.  The first stage will simulate the formation of a Milky Way sized galaxy from cosmological initial conditions.  The second stage will extract that galaxy and simulate it in an isolated, high-resolution context.  This two-pronged approach allows us to capture most of the physical mechanisms responsible for magnetic field growth.   The cosmological simulations will capture the environmental processes and to some limited extend dynamo processes, while the isolated simulations will have resolution to better capture the dynamo.  By extracting galaxies and their local environments from the cosmological simulations we will accurately model the circumgalactic material. In addition to containing a substantial amount of mass and likely magnetic energy, the environment above and below is important for the functioning of an ordered dynamo.  
 
-\textbf{Broader impacts:} Our proposed work will have significant
-impact on scientists in training, who will learn to use cutting-edge
-numerical tools will develop
-critical skills in scientific software development and data analysis.
-We will involve undergraduate and graduate students at  MSU and a
-postdoctoral researcher at 
-FSU in our research efforts, including
-students from under-represented groups.  The tools developed as part
-of this work will be incorporated into widely used open-source
-software projects and all simulation and analysis data products will
-be made publicly available, maximizing the return on this investment
-by enabling the community to more easily build upon this work.
-Scientific results from this program will be visualized by members of
-our collaboration, and will be disseminated to the public via our
-pre-existing collaborations with planetaria and museums, via the
-Internet, and as part of outreach talks given by members of this
-project.  The simulation data produced as a result of this project
-will be used in courses at both
-MSU and FSU, and the curricular materials will be made
-available via the Internet.
+\textbf{Intellectual merit:} This project is novel because it will use high resolution magnetohydrodynamics simulations to self-consistently follow the evolution of plasma over a huge range of astrophysically important length, density, and temporal scales, thus bridging the gap between the cosmological structure formation that results in galactic-scale magnetic fields and the star-forming molecular clouds that form out of the magnetized interstellar medium.  This is crucial because an improved understanding of how the magnetized interstellar medium (ISM) forms within galaxies will lead to more accurate understanding of both observations and dynamics of the Milky Way and similar galaxies.
 
+
+\textbf{Broader impacts:} 
+Our proposed work will have significant impact on scientists in training, who will learn to use cutting-edge numerical tools will develop critical skills in scientific software development and data analysis.  The tools developed as part of this work will be incorporated into widely used open-source software projects and all simulation and analysis data products will be made publicly available, maximizing the return on this investment by enabling the community to more easily build upon this work.  This work, as well as a myriad of other physics and astronomy observations, will be shared with the public via monthly ``Ask A Scientist'' events in Tallahassee.
 %%%%%%%%
 
 \end{document}
